--- a/Buoi1/image/index.html
+++ b/Buoi1/image/index.html
@@ -34,13 +34,15 @@
         <dd>White cold drink</dd>
     </dl>
     <ul>
-        <b><li>Viet Nam</li></b>
-        <ol>
-            <li>Ha Noi</li>
-            <li>Sai Gon</li>
-            <li>Hue</li>
-            <li>Da Nang</li>
-        </ol>
+        <li><b>Viet Nam</b>
+            <ol>
+                <li>Ha Noi</li>
+                <li>Sai Gon</li>
+                <li>Hue</li>
+                <li>Da Nang</li>
+            </ol>
+        </li>
+        
         <b><li>Hoa Ky</li></b>
         <ol>
             <li>New york</li>
