--- a/Buoi1/image/index.html
+++ b/Buoi1/image/index.html
@@ -62,5 +62,9 @@
         </li>
         
     </ul>
+    <audio controls>
+        <source src="https://www.dropbox.com/s/9vz1i8y8dw3hjk9/horse.mp3?dl=1" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
 </body>
 </html>
