--- a/Buoi1/image/demo.html
+++ b/Buoi1/image/demo.html
@@ -1,11 +1,93 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title>Hello, world!</title>
 </head>
+
 <body>
-    <h1>Xin chao</h1>
+    <div class="container-fluid">
+        <div class="row" style="margin: 100px;">
+            <div class="col-4" style="border-right: 5px #258578 double;">
+                <center>
+                    <img src="img/little-fashion-girl-with-bag.jpg" alt="" width="250px" style="border-radius: 50%; margin: 5px;">
+                    <h3 style="color: #23766b;">PHẠM NGỌC PHƯƠNG TRANG</h3>
+                </center>
+                <div style="border-bottom: 3px #258578 groove; border-top:3px #258578 groove ;">
+                    <h5 style="text-align: center; color:#23766b; font-size: 27px;">THÔNG TIN LIÊN HỆ</h5>
+                    <p style="text-align: justify; color: #23766b;font-size: 20px;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" style="color:#23766b" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+  <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+</svg>: 47N Hoàng Quốc Việt, P.Phú Mỹ, Q.7,<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TP.Hồ Chí Minh, Việt Nam
+                    </p>
+                    <p style="text-align: justify; color: #23766b;font-size: 20px;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-envelope-at-fill" viewBox="0 0 16 16">
+  <path d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2H2Zm-2 9.8V4.698l5.803 3.546L0 11.801Zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 9.671V4.697l-5.803 3.546.338.208A4.482 4.482 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671Z"/>
+  <path d="M15.834 12.244c0 1.168-.577 2.025-1.587 2.025-.503 0-1.002-.228-1.12-.648h-.043c-.118.416-.543.643-1.015.643-.77 0-1.259-.542-1.259-1.434v-.529c0-.844.481-1.4 1.26-1.4.585 0 .87.333.953.63h.03v-.568h.905v2.19c0 .272.18.42.411.42.315 0 .639-.415.639-1.39v-.118c0-1.277-.95-2.326-2.484-2.326h-.04c-1.582 0-2.64 1.067-2.64 2.724v.157c0 1.867 1.237 2.654 2.57 2.654h.045c.507 0 .935-.07 1.18-.18v.731c-.219.1-.643.175-1.237.175h-.044C10.438 16 9 14.82 9 12.646v-.214C9 10.36 10.421 9 12.485 9h.035c2.12 0 3.314 1.43 3.314 3.034v.21Zm-4.04.21v.227c0 .586.227.8.581.8.31 0 .564-.17.564-.743v-.367c0-.516-.275-.708-.572-.708-.346 0-.573.245-.573.791Z"/>
+</svg>: pnptrang2704@gmail.com
+                    </p>
+                    <p style="text-align: justify; color: #23766b;font-size: 20px;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+</svg>: 0934100453
+                    </p>
+                </div>
+                <div style="border-bottom: 3px #258578 groove;">
+                    <h5 style="text-align: center; color:#23766b; font-size: 27px;">THÔNG TIN CÁ NHÂN</h5>
+                    <p style="text-align: justify; color: #23766b; font-size: 20px;">
+                        <b>Bằng cấp</b>: Cử nhân công nghệ thông tin <br>
+                        <b> Đại học</b>: Trường Đại Học Công Nghệ <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Thành phố Hồ Chí Minh - Hutech<br><b> Sở thích</b>: Nghe nhạc, đọc sách, đi du lịch...
+                    </p>
+                </div>
+                <div style="border-bottom: 3px #258578 groove;">
+                    <h5 style="text-align: center; color:#23766b; font-size: 27px;">CÁC CHỨNG CHỈ </h5>
+                    <p style="text-align: justify; color: #23766b; font-size: 20px;">
+                        Chứng chỉ tiếng Anh:
+                        <br> Chứng chỉ tin học văn phòng:
+                    </p>
+                </div>
+                <div>
+                    <h5 style="text-align: center; color:#23766b; font-size: 27px;">MỤC TIÊU CÔNG VIỆC </h5>
+                </div>
+            </div>
+            <div class="col-8">
+                <div style="border-bottom: 3px #258578 groove; margin-left: 20px;">
+                    <h5 style=" color:#23766b; font-size: 27px;">VỊ TRÍ ỨNG TUYỂN</h5>
+                    <p style="text-align: justify; color: #23766b; font-size: 18px; ">
+                        Không biết cây tre đã gắn bó với người dân Việt Nam từ bao giờ “Tre giữ làng, giữ nước, giữ mái nhà tranh, giữ đồng lúa chín....”. Cây tre như biểu tượng cho con người Việt Nam vậy, luôn vươn cao với dáng đứng thẳng không bao giờ chịu khuất phục. Tre
+                        có rất nhiều loại khác nhau, nhưng đều mang lại lợi ích vô cùng to lớn cho con người. Từ thuở sơ khai, dưới bóng tre xanh, những người dân cày Việt Nam dựng nhà, cày cấy; dưới bóng tre xanh mọi người cùng nhau quây quần chò chuyện
+                        nghỉ trưa. Tre có thể dùng để đan lát, làm rất nhiều đồ vật trong nhà. Cứ như vậy, tre trở thành một người bạn thân thiết không thể thiếu của nông dân Việt Nam trong lao động. Tre còn có vai trò vô cùng to lớn đó là bảo vệ quê
+                        hương, tre xung phong vào xe tăng đại bác... Người nông dân hay người lính dùng tre để làm vũ khí chiến đấu. Tre luôn mang lại rất nhiều lợi ích to lớn cho đời sống dân tộc. Chính vì vậy dù mai sau có nhiều sắt, thép đi chăng nữa
+                        thì cây tre vẫn đóng vai trò quan trọng trong cuộc sống người Việt Nam.
+
+                    </p>
+                </div>
+                <div style=" margin-left: 20px;">
+                    <h5 style=" color:#23766b; font-size: 27px;">CÁC HOẠT ĐỘNG ĐÃ THAM GIA</h5>
+                    <p style="text-align: justify; color: #23766b; font-size: 20px;">
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
 </body>
+
 </html>
