--- a/Buoi1/image/thehtml.html
+++ b/Buoi1/image/thehtml.html
@@ -6,14 +6,12 @@
     <title>[Thực hành] Sử dụng thẻ HTML cơ bản</title>
 </head>
 <body>
-    <h1>HTML: HyperText Markup Language</h1>
+    <h1>HTML: HyperText Markup Language</h1> <!--The block luon luon xuong dong-->
     <p>Tim Berners-Lee invented the first browser at CERN, to enable researchers to share their research with eachother.</p>
 <a href="http://home.web.cern.ch/topics/birth-web">
     Read more about the history of HTML
-    <p>
     <img src="https://www.kasandbox.org/programming-images/misc/tim-berners-lee-webpage.png" alt="Anh Tim" width="500">
     <br>Image courtesy CERN 
-    </p>
 </a>
 </body>
 </html>
