--- a/Buoi1/image/cv.html
+++ b/Buoi1/image/cv.html
@@ -40,8 +40,8 @@
 </ul>
  <h1>Kinh nghiệm</h1>
  <h2>Digital Marketing</h2>
- <h3>Công ty U&ME</h3>
- <p>Plan and implement marketing/promotion activities to meet business targets</p>
+ <h3><i>Công ty U&ME</i></h3>
+ <p>Plan and implement <b>marketing/promotion</b> activities to meet business targets</p>
  <h1>Định hướng phát triển cá nhân</h1> <p> I want to <strong> Manager</strong> </p>
 </body>
 </html>
