--- a/Buoi1/image/BuoiForm/form.html
+++ b/Buoi1/image/BuoiForm/form.html
@@ -6,34 +6,40 @@
     <title>Luyện tập tạo form</title>
 </head>
 <body>
-    <h1>SO THICH CUA BAN</h1>
-    <table>
-        <tr>
-            <div>
-                <td><label for="name">Ho va ten</label></td>
-                <td><input type="text" id="name" name="name" placeholder="Ho va ten"></td>
-            </div>
-        </tr>
-        <tr>
-            <div>
-            <td><label for="email">Email</label></td>
-            <td><input type="email" id="email" name="email" placeholder="Email"></td>
-            </div>
-        </tr>
-        <tr>
-            <div>
-            <td><label for="">So thich</label></td>
-            <td>
-                <input type="checkbox" name="type" value="1" checked>The thao
-                <input type="checkbox" name="type" value="2" >Am nhac
-                <input type="checkbox" name="type" value="2" >Doc sach
-                <input type="checkbox" name="type" value="2" >Luot web
-                <input type="checkbox" name="type" value="2" >Choi game
-                <input type="checkbox" name="type" value="2" >Dien Anh
-                <input type="checkbox" name="type" value="2" >Du lich
-            </td>
-            </div>
-        </tr>
-    </table>
+    <form action="">
+        <h1>SO THICH CUA BAN</h1>
+        <table>
+            <tr>
+                <div>
+                    <td><label for="name">Ho va ten</label></td>
+                    <td><input type="text" id="name" name="name" placeholder="Ho va ten"></td>
+                </div>
+            </tr>
+            <tr>
+                <div>
+                <td><label for="email">Email</label></td>
+                <td><input type="email" id="email" name="email" placeholder="Email"></td>
+                </div>
+            </tr>
+            <tr>
+                <div>
+                <td><label for="">So thich</label></td>
+                <td>
+                    <input type="checkbox" name="type" value="1" checked>The thao
+                    <input type="checkbox" name="type" value="2" >Am nhac
+                    <input type="checkbox" name="type" value="2" >Doc sach<br>
+                    <input type="checkbox" name="type" value="2" >Luot web 
+                    <input type="checkbox" name="type" value="2" >Choi game
+                    <input type="checkbox" name="type" value="2" >Dien Anh<br>
+                    <input type="checkbox" name="type" value="2" >Du lich
+                </td>
+                </div>
+            </tr>
+            <tr>
+                <td><button type="submit">Gui thong tin</button></td>
+                <td><button type="reset">Nhap lai</button></td>
+            </tr>
+        </table>
+    </form>
 </body>
 </html>
