--- a/Buoi1/image/BuoiForm/survey.html
+++ b/Buoi1/image/BuoiForm/survey.html
@@ -4,107 +4,129 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Market Research Survey</title>
+  <link rel="stylesheet" href="servey.css">  
 </head>
 <body>
-    <form action="">
-        <h2>Market Research Survey</h2>
+    <h2>Market Research Survey</h2>
         <p>Please take a few moments to complete this satisfaction survey. </p>
-        <p><b>What is your age range?</b></p>
-        <div>
-            <select name="" id="">
-                <option value="1">18-24</option>
-                <option value="2">25-34</option>
-                <option value="3">35-50</option>
-                <option value="DN">50+</option>
-             </select>
-        </div>
-        <p><b>What is your yearly income range? </b></p>
-        <div>
-            <select name="" id="">
-                <option value="1">$0 - $25,000</option>
-                <option value="2">$25,001 -$50,000</option>
-                <option value="3">$50,001 - $100,000</option>
-                <option value="DN">$100,000+</option>
-             </select>
-        </div>
-        <p><b>Gender Identity</b></p>
-        <div>
-            <input type="radio" name="gender" value="1" checked>Male <br>
-            <input type="radio" name="gender" value="2">Female <br>
-            <input type="radio" name="gender" value="2">Nonbinary <br>
-            <input type="radio" name="gender" value="0" >Other <br>
-            <input type="text" id="gender"name="gender" placeholder="Other"><br>
-        </div>
-        <p><b>Which of the following products have your purchased in the last 2 months.
-             Please check all that apply. </b></p>
-       <div>
-            <input type="checkbox" name="type" value="1" checked>Product 1<br>
-            <input type="checkbox" name="type" value="2" >Product 2<br>
-            <input type="checkbox" name="type" value="3" >Product 3<br>
-       </div>
-       <div><p><b>How often would you use our new product? </b></p>    
+    <form action="">
+        <ul>
+            <li>
+                <label id="File01" for=""><b>What is your age range?</b></label>
+                <div>
+                    <select name="" id="">
+                        <option value="1">18-24</option>
+                        <option value="2">25-34</option>
+                        <option value="3">35-50</option>
+                        <option value="DN">50+</option>
+                    </select>
+                </div>
+            </li>
+            <li>
+                <label for=""><b>What is your yearly income range? </b></label>
+                <div>
+                    <select name="" id="">
+                        <option value="1">$0 - $25,000</option>
+                        <option value="2">$25,001 -$50,000</option>
+                        <option value="3">$50,001 - $100,000</option>
+                        <option value="DN">$100,000+</option>
+                    </select>
+                </div>
+            </li>
+           <li>
+            <label for=""><b>Gender Identity</b></label>
             <div>
-                <input type="radio" name="gender" value="1" checked>Daily <br>
-                <input type="radio" name="gender" value="2">Weekly <br>
-                <input type="radio" name="gender" value="2">Monthly <br>
+                <input type="radio" name="gender" value="1" checked>Male <br>
+                <input type="radio" name="gender" value="2">Female <br>
+                <input type="radio" name="gender" value="2">Nonbinary <br>
+                <input type="radio" name="gender" value="0" >Other <br>
+                <input type="text" id="gender"name="gender" placeholder="Other"><br>
             </div>
-        </div>
-        <p><b>How often would you use our new product? </b></p>  
-        <table>
-            <tr>
-                <td><p>$</p></td>
-                <td><input type="text" id="name" name="name" placeholder="Dollars"></td></td>
-                <td><p>.</p></td>
-                <td><input type="text" id="name" name="name" placeholder="Cents"></td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Dollars</td>
-                <td></td>
-                <td>Cents</td>
-
-            </tr>
-        </table>
-        <p><b>What features would you like to see in the new product.</b></p>  
-        <div>
-            <textarea name="" id="" cols="30" rows="5"></textarea>
-        </div>
-        <p>What features would you like to see in the new product</p>
-        <table class="survey" border="1">
-            <tr>
-                <td></td>
-                <td>Strongly Disagree</td>
-                <td> Disagree</td>
-                <td>Agree</td>
-                <td>Strongly Agree</td>
-            </tr>
-             <tr>
-                <td>Our products are priced fairly</td>
-                <td> <input type="radio" name="price" value="1" checked>1</td>
-                <td> <input type="radio" name="price" value="2">2</td>
-                <td><input type="radio" name="price" value="3">3</td>
-                <td><input type="radio" name="price" value="4">4</td> 
-             </tr>
-             <tr>
-                <td>Our products are high quality</td>
-                <td> <input type="radio" name="quality" value="1" checked>1</td>
-                <td> <input type="radio" name="quality" value="2">2</td>
-                <td><input type="radio" name="quality" value="3">3</td>
-                <td><input type="radio" name="quality" value="4">4</td> 
-             </tr>
-             <tr>
-                <td>You would recommend our product to friend or coworker.</td>
-                <td> <input type="radio" name="recommend" value="1" checked>1</td>
-                <td> <input type="radio" name="recommend" value="2">2</td>
-                <td><input type="radio" name="recommend" value="3">3</td>
-                <td><input type="radio" name="recommend" value="4">4</td> 
-             </tr>
-        </table>
-        <br>
-        <div>
-            <button type="submit" style="vertical-align: middle">submit</button>
-        </div>
-        <br>
+           </li>
+          <li>
+            <label for=""><b>Which of the following products have your purchased in the last 2 months.
+                Please check all that apply. </b></label>
+            <div>
+                <input type="checkbox" name="type" value="1" checked>Product 1<br>
+                <input type="checkbox" name="type" value="2" >Product 2<br>
+                <input type="checkbox" name="type" value="3" >Product 3<br>
+            </div>
+          </li>
+          <li>
+            <div>
+                <label for=""><b>How often would you use our new product? </b></label> 
+                <div>
+                    <input type="radio" name="gender" value="1" checked>Daily <br>
+                    <input type="radio" name="gender" value="2">Weekly <br>
+                    <input type="radio" name="gender" value="2">Monthly <br>
+                </div>
+            </div>
+          </li>
+            <li>
+                <label for=""><b>How often would you use our new product? </b></label>
+                <table>
+                    <tr>
+                        <td><p>$</p></td>
+                        <td><input type="text" id="name" name="name" placeholder="Dollars"></td></td>
+                        <td><p>.</p></td>
+                        <td><input type="text" id="name" name="name" placeholder="Cents"></td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Dollars</td>
+                        <td></td>
+                        <td>Cents</td>
+    
+                    </tr>
+                </table>
+            </li>
+            <li>
+                <label for=""><b>What features would you like to see in the new product.</b></label>
+                <div>
+                    <textarea name="" id="" cols="30" rows="5"></textarea>
+                </div>
+            </li>
+            <li>
+                <label for="">Please rate your level of agreement with the following statements.</label>
+                <table class="survey" border="1">
+                    <tr id="style1">
+                        <td></td>
+                        <td>Strongly Disagree</td>
+                        <td> Disagree</td>
+                        <td>Agree</td>
+                        <td>Strongly Agree</td>
+                    </tr>
+                    <tr>
+                        <td id="style"><b>Our products are priced fairly</b></td>
+                        <td> <input type="radio" name="price" value="1" checked>1</td>
+                        <td> <input type="radio" name="price" value="2">2</td>
+                        <td><input type="radio" name="price" value="3">3</td>
+                        <td><input type="radio" name="price" value="4">4</td> 
+                    </tr>
+                    <tr id="style1">
+                        <td id="style"><b>Our products are high quality</b></td>
+                        <td> <input type="radio" name="quality" value="1" checked>1</td>
+                        <td> <input type="radio" name="quality" value="2">2</td>
+                        <td><input type="radio" name="quality" value="3">3</td>
+                        <td><input type="radio" name="quality" value="4">4</td> 
+                    </tr>
+                    <tr>
+                        <td id="style"><b>You would recommend our product to friend or coworker</b></td>
+                        <td> <input type="radio" name="recommend" value="1" checked>1</td>
+                        <td> <input type="radio" name="recommend" value="2">2</td>
+                        <td><input type="radio" name="recommend" value="3">3</td>
+                        <td><input type="radio" name="recommend" value="4">4</td> 
+                    </tr>
+                </table>
+                <br>
+            </li>
+            <li>
+                <div>
+                    <button type="submit" style="vertical-align: middle">submit</button>
+                </div>
+                <br>
+            </li>
+    </ul>
     </form>  
 </body>
 </html>
