--- a/CSSLayout/demolayout.html
+++ b/CSSLayout/demolayout.html
@@ -4,72 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Layout</title>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-        .head,.left, .head-link {
-           margin-bottom: 10px;
-        }
-        div.head {
-            background-color: rgb(238, 233, 233);
-            border: 1px solid gray;
-        }
-        div.left {
-            padding: 10px;
-            width: 30%;
-            /*background-color: darkgrey;*/
-            height: 700px;
-            float: left;
-        }
-        div.head-link {
-            /*background-color: darkgrey;*/
-            padding-top: 5px;
-            padding-bottom: 5px;
-            color: black;
-        }
-        div.head-link-a {
-            text-align: center;
-            font-size: large;
-        }
-        .content {
-            padding: 20px;
-            width: 70%;
-            /*background-color: brown;
-            height: 300px;*/
-            float: left;
-            padding-left: 40px;
-        }
-        .footer {
-            clear: both;
-            height: 50px;
-            /*background-color: sienna*/
-            background-color: slategray;
-        }
-        .left-img > img {
-            width: 100%;
-            margin-top: 1px;
-        }
-        #style {
-            text-align: center;
-        }
-        iframe {
-            width: 100%;
-            height: 400px;
-        }
-        tr {
-            margin: 20px;
-        }
-        .content-param {
-            padding-top: 5px;
-            width: 100%;
-            text-align:justify;
-        }
-        .left-container {
-            height: 700px;
-            overflow: scroll;
-        }
-    </style>
+    <link rel="stylesheet" href="demolayout.css">
 </head>
 <body>
     <div class="head">
