--- a/css_RWD/gallery.html
+++ b/css_RWD/gallery.html
@@ -11,25 +11,31 @@
         <h2>Responsive Image Gallery</h2>
         <h4>Resize the browser window to see the effect.</h4>
     </div>
-    <div class="col-md-3 col-sm-6 col-12">
+    <div class="col-12 col-sm-6 col-md-3 image">
         <div class="gallery">
             <a href="https://demo.codegym.vn/web/15/gallery/img_fjords.jpg">
                 <img src="https://demo.codegym.vn/web/15/gallery/img_fjords.jpg" alt="">
             </a>
             <p> Add a description of the image here</p>   
         </div>
+    </div>
+    <div class="col-12 col-sm-6 col-md-3 image">
         <div class="gallery">
             <a href="https://demo.codegym.vn/web/15/gallery/img_fjords.jpg">
                 <img src="https://demo.codegym.vn/web/15/gallery/img_fjords.jpg" alt="">
             </a>
             <p> Add a description of the image here</p>   
         </div>
+    </div>
+    <div class="col-12 col-sm-6 col-md-3 image">
         <div class="gallery">
             <a href="https://demo.codegym.vn/web/15/gallery/img_fjords.jpg">
                 <img src="https://demo.codegym.vn/web/15/gallery/img_fjords.jpg" alt="">
             </a>
             <p> Add a description of the image here</p>   
         </div>
+    </div>
+    <div class="col-12 col-sm-6 col-md-3 image">
         <div class="gallery">
             <a href="https://demo.codegym.vn/web/15/gallery/img_fjords.jpg">
                 <img src="https://demo.codegym.vn/web/15/gallery/img_fjords.jpg" alt="">
@@ -38,7 +44,7 @@
         </div>
     </div>
     <div class="col-12 col-sm-12 col-md-12 para">
-        <p>
+        <p id="style">
             This example use media queries to re-arrange the images on different screen sizes: 
             for screens larger than 700px wide, it will show four images side by side, for screens 
             smaller than 700px, it will show two images side by side. For screens smaller than 500px, 
